TrialoftheTitansPackage/main/default/objects/QC_Question_Answer__c/QC_Question_Answer__c.object-meta.xml
<CustomObject>
    <label>QC Question Answer</label>
    <nameField>
        <displayFormat>QCA-{000000}</displayFormat>
        <label>QC Question Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QC Question Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>