TrialoftheTitansPackage/main/default/objects/QC_Question_Answer__c/fields/Expected_Answer__c.field-meta.xml
<CustomField>
    <fullName>Expected_Answer__c</fullName>
    <description>Answer that was expected, based on the question given.</description>
    <inlineHelpText>Answer that was expected, based on the question given.</inlineHelpText>
    <label>Expected Answer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>