TrialoftheTitansPackage/main/default/objects/QC_Question_Answer__c/fields/Hero_Answer__c.field-meta.xml
<CustomField>
    <fullName>Hero_Answer__c</fullName>
    <description>The answer that was given by the hero.</description>
    <inlineHelpText>The answer that was given by the hero.</inlineHelpText>
    <label>Hero Answer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>