TrialoftheTitansPackage/main/default/objects/QC_Question_Answer__c/fields/QC_Interview__c.field-meta.xml
<CustomField>
    <fullName>QC_Interview__c</fullName>
    <description>The QC interview this question/answer data were a part of.</description>
    <inlineHelpText>The QC interview this set of questions and answers are a part of.</inlineHelpText>
    <label>QC Interview</label>
    <referenceTo>QC_Interview__c</referenceTo>
    <relationshipLabel>QC Question Answers</relationshipLabel>
    <relationshipName>QC_Question_Answers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>