TrialoftheTitansPackage/main/default/objects/QC_Question_Answer__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>Score assigned by the interviewer to the hero&apos;s answer.</description>
    <inlineHelpText>Score assigned by the interviewer to the hero&apos;s answer.</inlineHelpText>
    <label>Score</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>